--- a/client-ssl-bundle-demo/src/main/resources/application.properties
+++ b/client-ssl-bundle-demo/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
-spring.ssl.bundle.jks.clientapp.key.alias=clientalias
-spring.ssl.bundle.jks.clientapp.reload-on-update=true
-spring.ssl.bundle.jks.clientapp.keystore.location=${CLIENT_KEYSTORE}
+spring.ssl.bundle.jks.clientapp.key.alias=serveralias
+#spring.ssl.bundle.jks.clientapp.reload-on-update=true
+spring.ssl.bundle.jks.clientapp.keystore.location=classpath:keystore.p12
 spring.ssl.bundle.jks.clientapp.keystore.password=password
 spring.ssl.bundle.jks.clientapp.keystore.type=PKCS12
+
 #Trust Store details
-spring.ssl.bundle.jks.clientapp.truststore.location=${CLIENT_TRUSTSTORE}
+spring.ssl.bundle.jks.clientapp.truststore.location=classpath:myTrustStore.p12
 spring.ssl.bundle.jks.clientapp.truststore.password=secret
 spring.ssl.bundle.jks.clientapp.truststore.type=PKCS12
 
