--- a/server-ssl-bundle-demo/src/main/resources/application.properties
+++ b/server-ssl-bundle-demo/src/main/resources/application.properties
@@ -5,16 +5,19 @@ spring.datasource.name=movies
 spring.sql.init.mode=embedded
 
 #Server SSL config
-spring.ssl.bundle.jks.movieapp.reload-on-update=true
+#spring.ssl.bundle.jks.movieapp.reload-on-update=true
 spring.ssl.bundle.jks.movieapp.key.alias=serveralias
-spring.ssl.bundle.jks.movieapp.keystore.location=${SERVER_KEYSTORE}
+spring.ssl.bundle.jks.movieapp.keystore.location=classpath:certs/keystore.p12
 spring.ssl.bundle.jks.movieapp.keystore.password=password
 spring.ssl.bundle.jks.movieapp.keystore.type=PKCS12
 #Trust Store details
-spring.ssl.bundle.jks.movieapp.truststore.location=${SERVER_TRUSTSTORE}
+spring.ssl.bundle.jks.movieapp.truststore.location=classpath:certs/myTrustStore.p12
 spring.ssl.bundle.jks.movieapp.truststore.password=secret
 spring.ssl.bundle.jks.movieapp.truststore.type=PKCS12
 server.ssl.bundle=movieapp
 server.ssl.client-auth=need
 
 server.port=8443
+server.ssl.enabled=true
+
+management.endpoints.web.exposure.include=*
